done my first website

--- a/index.html
+++ b/index.html
@@ -34,16 +34,20 @@
     </section>
     <section class="experience-are">
         <h2>Experiences</h2>
-        <div class="half-width">
+        <div id="during-business" class="half-width single-experience">
             <h2>DURING BUSINESS</h2>
-            <h3 class="time">2019-Present</h3>
+            <h3 class="name-highlight">2019 - Present | I am learning</h3>
             <p>I have started an own business with vision that I will be a businessman in future. My first business is a grocery shop in Banasree. I got opportunity to start a new distribution business during grocery business in 2019. I took that opportunity and start a new business. I had invesment limitation. than I take some loan from friends and family. during my business the world has been stop for covid pendamic. I fall this this situation.</p>
 
         </div>
-        <div class="half-width">
+        <div id="during-job" class="half-width single-experience">
+            <h2>DURING job</h2>
+            <H3 class="name-highlight">2015 - 2017 | Artisti collection ltd</H3>
+            <p>This is my first job at Artisti Collection Ltd as a sales executive. I have learned lots of things like how to make conversation with customers with polite, how to sale the products, how to maintain a showroom, what type of behiver with Colleagues. Alhamdulillah I became a assitant manager there. The showroom has been clossed  for managment fauld. Artisti Collection Ltd is one of the best brand in that time.</p>
 
         </div>
     </section>
     </section>
+    <footer>© Sajib 2021, all rights reverved.</footer>
 </body>
 </html>
