--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div id="during-business" class="half-width single-experience">
             <h2>DURING BUSINESS</h2>
             <h3 class="name-highlight">2019 - Present | I am learning</h3>
-            <p>I have started an own business with vision that I will be a businessman in future. My first business is a grocery shop in Banasree. I got opportunity to start a new distribution business during grocery business in 2019. I took that opportunity and start a new business. I had invesment limitation. than I take some loan from friends and family. during my business the world has been stop for covid pendamic. I fall this this situation.</p>
+            <p>I have started an own business with vision that I will be a businessman in future. My first business is a grocery shop in Banasree. I got opportunity to start a new distribution business during grocery business in 2019. I took that opportunity and start a new business. I had invesment limitation. than I take some loan from friends and family. during my business the world has been stoped for covid pendamic. I fall this this situation.</p>
 
         </div>
         <div id="during-job" class="half-width single-experience">
